formver.compiler-plugin/testData/diagnostics/conversion/nameing/predicate_function_shared_collision.kt
// NEVER_VALIDATE
// RENDER_PREDICATES

import org.jetbrains.kotlin.formver.plugin.Pure

class A(val x: Int)

@Pure
fun <!VIPER_TEXT!>shared<!>(x: Int): Int = x

fun <!VIPER_TEXT!>predicateFunctionSharedCollision<!>(a: A) {
    shared(0)
    a.x
}
